--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ google-api-python-client = "*"
 google-auth-httplib2 = "*"
 google-auth-oauthlib = "*"
 oauth2client = "*"
+flup = "==1.0.2"
 
 [requires]
 python_version = "2.7"
